# qrpto-note

./: .gitignore  Cargo.toml  README.md  clippy.toml  fixer.sh  index.html  mega.txt  rename-files.sh  rustfmt.toml  toe.txt
.cargo/: audit.toml
.github/workflows/: rust-ci.yml  security.yml
fuzz/: Cargo.toml
fuzz/fuzz_targets/: crypto_decrypt.rs  secure_buffer.rs  vault_load.rs
guides/: opsec_crash_course.md
src/: app.rs  crypto.rs  main.rs  secure_buf.rs  storage.rs  ui.rs
src/tests/: crypto_tests.rs  mod.rs
tools/audit/: qrptonote_audit.py  readme.md
