[package]
name        = "qrptonote"
version     = "0.2.0"
edition     = "2021"
description = "AES-256-GCM encrypted terminal notebook. mlock'd cleartext buffer, Argon2id KDF, prctl-hardened."
readme      = "README.md"
license     = "MIT"
repository  = "https://github.com/noveoko/qrpto-note"
homepage    = "https://noveoko.github.io/qrpto-note"
documentation = "https://github.com/noveoko/qrpto-note/blob/main/README.md"
keywords    = ["encryption", "vault", "security", "terminal", "secrets"]
categories  = ["command-line-utilities", "cryptography"]
exclude     = ["tools/", "index.html"]

[[bin]]
name = "qrptonote"
path = "src/main.rs"

[dependencies]
ratatui   = "0.26"
crossterm = "0.27"
aes-gcm   = "0.10"
aead      = "0.5"
zeroize   = { version = "1.8", features = ["derive", "alloc"] }
libc      = "0.2"
rand      = "0.8"
argon2    = "0.5"
base64ct  = "=1.6.0"
